# buhbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  convert_to_md_markdownify_v3.py  main.py  pyproject.toml  requirements.txt
deploy/: crontab.txt  run_job.sh  setup_vm.sh
docs/api/: api-map.md  api_map.md  zendesk_api_specificcation.md
docs/api/openai/assistant/: create-assistant.md  retrieve-assistant.md  update-assistant.md
docs/api/openai/file_batches/: list-vector-store-files-in-a-batch.md  retrieve_vector_store_file_batch.md
docs/api/openai/files/: create-vector-store-file.md  delete_vector_store_file.md  retrieve_vector_store_file.md  update_vector_store_file_attributes.md  upload-files.md
docs/api/openai/vector-store-file-batches/: cancel-a-file-batch.md  create-vector-store-file-batch.md
docs/api/openai/vector_stores/: create-a-vector-store.md  (+5 more)
docs/architecture/: standard-data-ingestion-workflow-in-rag.md
docs/draft/: assistant-improvement-options.md  chunking-for-rag.md  improvement-proposal.md  optimus-bot-pipeline-review.md  solution-flow.puml
docs/lifecycle/: IMPLEMENTATION-BRIEF.md  code-structure.md  handoff-prompt.md  state-design.md  transition-techniques.md
docs/prior/: prior-implementation.md
evals/: assistant.py  checks.py  questions.py  run_eval.py
src/: artifacts.py  chunk.py  config.py  content.py  lock.py  process.py  reconcile.py  report.py  settings.py  state.py  uploader.py  vector_store.py  zendesk.py
tests/: test_chunk.py  test_content.py  test_eval_checks.py  test_process.py  test_state.py
(+2 files in other folders)
