[project]
name = "buhbot"
version = "0.1.0"
description = "OptiSigns OptiBot mini-clone: scrape support articles, embed into an OpenAI Vector Store, sync daily"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "markdownify>=0.11.6",
    "beautifulsoup4>=4.12.0",
]
